Fix missing button block variations and image block alignment

--- a/src/scss/wordpress/_image.scss
+++ b/src/scss/wordpress/_image.scss
@@ -49,10 +49,10 @@
     margin-bottom: 0.5em;
   }
 
-  // .aligncenter {
-  //   margin-left: auto;
-  //   margin-right: auto;
-  // }
+  .aligncenter {
+    margin-left: auto;
+    margin-right: auto;
+  }
 
   // Supply caption styles to images, even if the theme hasn't opted in.
   // Reason being: the new markup, <figcaptions>, are not likely to be styled in the majority of existing themes,
